--- a/templates/views/base.twig
+++ b/templates/views/base.twig
@@ -7,6 +7,7 @@
 {% endblock %}
 
 	<body class="{{ body_class }}" data-template="base.twig">
+		{% include 'partials/_header-html.twig' %}
 		<header id="header">
 			{% block header %}
 				<div class="container">
