--- a/templates/views/html-header.twig
+++ b/templates/views/html-header.twig
@@ -13,13 +13,13 @@
       s.parentNode.insertBefore(wf, s);
    })(document);
 </script>
-  <title>
+  {# <title>
     {% if wp_title %}
       {{ wp_title }} - {{ site.name }}
     {% else %}
       {{ site.name }}
     {% endif %}
-  </title>
+  </title> #}
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ theme.link }}/public/apple-touch-icon.png">
