--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
- * Theme Name: Blendid WP
- * Description: Starter Theme based on Blendid and Timber Starter Theme
- * Author: Alexander Almström
- * Author URI: http://www.alexanderalmstrom.com
+	Theme Name: wse.edu.co
+	Description: Powered by Timber. Yum!
+	Author: Mauricio Dulce
+	Author URI: http://mauriciodulce.com
+	Version: 1.0
 */
