--- a/templates/partials/_header-html.twig
+++ b/templates/partials/_header-html.twig
@@ -1,6 +1,14 @@
 {% include "partials/_topNav.twig" %}
 <header id="site-header" class="site-header wrapper header--sticky">
   <div class="container" id="js-nav">
-    <h2>perro</h2>
+    <a class="site--logo" href="{{ site.url }}" rel="home">{{ site.name }}</a>
+    <span class="site__menu-toggle"><i class="icon-toggle"></i></span>
+    <div class="header__menu">
+      <nav class="nav--primary">
+        <div class="menu nav" data-active-tab="0">
+          {% include "menu.twig" with { 'menu': menu.get_items } %}
+        </div>
+      </nav>
+    </div>
   </div><!--.container-->
 </header><!--/.header-->
