--- a/templates/views/base.twig
+++ b/templates/views/base.twig
@@ -8,22 +8,14 @@
 
 	<body class="{{ body_class }}" data-template="base.twig">
 		{% include 'partials/_header-html.twig' %}
-		<header id="header">
-			{% block header %}
-				<div class="container">
-					<div class="d-flex align-items-center justify-content-end">
-						<a class="logo mr-auto" href="{{ site.url }}" rel="home">{{ site.name }}</a>
-						<button class="navbar-toggler float-xs-right hidden-lg-up align-self-center" type="button" data-toggle="offcanvas" data-target="#nav-offcanvas"></button>
-						<nav id="nav" class="nav hidden-md-down" role="navigation">
-							{% include "menu.twig" with { 'menu': menu.get_items } %}
-						</nav>
-					</div>
-				</div>
-			{% endblock %}
-		</header>
-
-		<div class="offcanvas offcanvas-right">
-
+		<main class="container">
+			{% block before_content %}{% endblock %}
+      {% block content %}
+				Sorry, no content
+      {% endblock %}
+      {% block after_content %}{% endblock %}
+		</main>
+		{# <div class="offcanvas offcanvas-right">
 			<main id="main" role="main">
 				<div class="container">
 					<div class="row">
@@ -49,12 +41,7 @@
 					</footer>
 				{% endblock %}
 			</main>
-
-			<nav id="nav-offcanvas" class="nav-offcanvas hidden-lg-up d-flex align-items-center">
-	      {% include "menu.twig" with { 'menu': menu.get_items } %}
-	    </nav>
-
-		</div> <!-- /.offcanvas -->
+		</div> <!-- /.offcanvas --> #}
 
 		{{ function('wp_footer') }}
 
