--- a/templates/views/front-page.twig
+++ b/templates/views/front-page.twig
@@ -3,5 +3,5 @@
     {% include 'partials/_hero.twig' with { class: '-page' } %}
 {% endblock %}
 {% block content %}
-
+  {% include "blocks.twig" %}
 {% endblock %}
